<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cyclonedds_vendor</name>
    <version>0.4.0</version>
    <description>Wrapper package for Eclipse CycloneDDS.</description>
    <maintainer email="erik.boasson@adlinktech.com">Erik Boasson</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
