<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_cyclonedds_cpp</name>
  <version>1.3.4</version>
  <description>Implement the ROS middleware interface using Eclipse CycloneDDS in C++.</description>
  <maintainer email="erik.boasson@adlinktech.com">Erik Boasson</maintainer>
  <maintainer email="ivanpauno@ekumenlabs.com">Ivan Paunovic</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>cyclonedds</depend>
  <depend>iceoryx_binding_c</depend>
  <depend>rcutils</depend>
  <depend>rcpputils</depend>
  <depend>rmw</depend>
  <depend>rmw_dds_common</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_typesupport_introspection_c</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>tracetools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rmw_implementation_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
